learn : python oop arithmetic object

--- a/University/cos2210/week3/Untitled-1.ipynb
+++ b/University/cos2210/week3/Untitled-1.ipynb
@@ -170,6 +170,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Constructor of classC\n",
+      "1 R False\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ClassA:\n",
+    "    def __init__(self,x):\n",
+    "        self.x = x\n",
+    "\n",
+    "class ClassB:\n",
+    "    def __init__(self, y):\n",
+    "        self.y = y\n",
+    "\n",
+    "class ClassC(ClassA, ClassB):\n",
+    "    def __init__(self, x, y,z):\n",
+    "        ClassA.__init__(self,x)\n",
+    "        ClassB.__init__(self,y)\n",
+    "        self.z = z\n",
+    "        print(\"Constructor of classC\")\n",
+    "    def info(self):\n",
+    "        print(f\"x : {self.x}, y : {self.y}, z : {self.z}\")\n",
+    "\n",
+    "instance = ClassC(1,\"R\",False)\n",
+    "print(instance.x, instance.y, instance.z)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "0\n",
+      "9\n",
+      "1.0\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyInt:\n",
+    "    def __init__(self, number):\n",
+    "        self.real = number\n",
+    "    def __str__(self):\n",
+    "        return str(self.real)\n",
+    "    def __add__(self, other):\n",
+    "        return MyInt(self.real + other.real)\n",
+    "    def __sub__(self, other):\n",
+    "        return MyInt(self.real - other.real)\n",
+    "    def __mul__(self, other):\n",
+    "        return MyInt(self.real * other.real)\n",
+    "    def __truediv__(self, other):\n",
+    "        return MyInt(self.real / other.real)\n",
+    "    def __gt__(self, other):\n",
+    "        return self.real > other.real\n",
+    "    def __lt__(self, other):\n",
+    "        return self.real < other.real\n",
+    "    def __ge__(self, other):\n",
+    "        return self.real >= other.real\n",
+    "    def __le__(self, other):\n",
+    "        return self.real <= other.real\n",
+    "    def __eq__(self, other):\n",
+    "        return self.real == other.real\n",
+    "\n",
+    "# y = MyInt(5)\n",
+    "# print(y.real,y)\n",
+    "# dir(y)\n",
+    "x = MyInt(3)\n",
+    "y = MyInt(3)\n",
+    "print(x + y)\n",
+    "print(x - y)\n",
+    "print(x * y)\n",
+    "print(x / y)\n",
+    "print(x > y)\n",
+    "print(x < y)\n",
+    "print(x >= y)\n",
+    "print(x <= y)\n",
+    "print(x == y)\n",
+    "\n",
+    "z = x.__add__(y)\n",
+    "print(z)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
